@@ -5,11 +5,13 @@ import (
 	"bytes"
 	"encoding/binary"
 	"encoding/hex"
+	"errors"
 	"fmt"
 	"github.com/piotrnar/gocoin/client/common"
 	"github.com/piotrnar/gocoin/lib/btc"
 	"github.com/piotrnar/gocoin/lib/chain"
 	"github.com/piotrnar/gocoin/lib/script"
+	"io"
 	"os"
 	"sync"
 	"sync/atomic"
@@ -38,6 +40,7 @@ const (
 	TX_REJECTED_RBF_100     = 212
 
 	MEMPOOL_FILE_NAME = "mempool.bin"
+	MEMPOOL_FILE_NAME2 = "mempool.dmp"
 )
 
 var (
@@ -65,7 +68,7 @@ var (
 
 type OneTxToSend struct {
 	Data                []byte
-	Invsentcnt, SentCnt uint
+	Invsentcnt, SentCnt uint32
 	Firstseen, Lastsent time.Time
 	Own                 byte     // 0-not own, 1-own and OK, 2-own but with UNKNOWN input
 	Spent               []uint64 // Which records in SpentOutputs this TX added
@@ -73,7 +76,7 @@ type OneTxToSend struct {
 	*btc.Tx
 	Blocked    byte // if non-zero, it gives you the reason why this tx nas not been routed
 	MemInputs  bool // transaction is spending inputs from other unconfirmed tx(s)
-	SigopsCost uint
+	SigopsCost uint64
 	Final      bool // if true RFB will not work on it
 	VerifyTime time.Duration
 }
@@ -426,7 +429,7 @@ func HandleNetTx(ntx *TxRcvd, retry bool) (accepted bool) {
 
 	rec := &OneTxToSend{Data: ntx.raw, Spent: spent, Volume: totinp,
 		Fee: fee, Firstseen: time.Now(), Tx: tx, MemInputs: frommem,
-		SigopsCost: sigops, Final: final, VerifyTime: time.Now().Sub(start_time)}
+		SigopsCost: uint64(sigops), Final: final, VerifyTime: time.Now().Sub(start_time)}
 	TransactionsToSend[tx.Hash.BIdx()] = rec
 	TransactionsToSendSize += uint64(len(rec.Data))
 	for i := range spent {
@@ -611,7 +614,7 @@ func ExpireTxs() {
 	common.CounterMutex.Unlock()
 }
 
-func MempoolSave() {
+func MempoolSave1() {
 	if !common.CFG.TXPool.SaveOnDisk {
 		os.Remove(common.GocoinHomeDir + MEMPOOL_FILE_NAME)
 		return
@@ -639,11 +642,70 @@ func MempoolSave() {
 	f.Close()
 }
 
+func bool2byte(v bool) byte {
+	if v {
+		return 1
+	} else {
+		return 0
+	}
+}
+
+func (t2s *OneTxToSend)WriteBytes(wr io.Writer) {
+	btc.WriteVlen(wr, uint64(len(t2s.Data)))
+	wr.Write(t2s.Data)
+
+	btc.WriteVlen(wr, uint64(len(t2s.Spent)))
+	binary.Write(wr, binary.LittleEndian, t2s.Spent[:])
+
+	binary.Write(wr, binary.LittleEndian, t2s.Invsentcnt)
+	binary.Write(wr, binary.LittleEndian, t2s.SentCnt)
+	binary.Write(wr, binary.LittleEndian, uint32(t2s.Firstseen.Unix()))
+	binary.Write(wr, binary.LittleEndian, uint32(t2s.Lastsent.Unix()))
+	binary.Write(wr, binary.LittleEndian, t2s.Volume)
+	binary.Write(wr, binary.LittleEndian, t2s.Fee)
+	binary.Write(wr, binary.LittleEndian, t2s.SigopsCost)
+	binary.Write(wr, binary.LittleEndian, t2s.VerifyTime)
+	wr.Write([]byte{t2s.Own, t2s.Blocked, bool2byte(t2s.MemInputs), bool2byte(t2s.Final)})
+}
+
+func MempoolSave2() {
+	if !common.CFG.TXPool.SaveOnDisk {
+		os.Remove(common.GocoinHomeDir + MEMPOOL_FILE_NAME2)
+		return
+	}
+
+	f, er := os.Create(common.GocoinHomeDir + MEMPOOL_FILE_NAME2)
+	if er != nil {
+		println(er.Error())
+		return
+	}
+
+	fmt.Println("Saving", MEMPOOL_FILE_NAME2)
+	wr := bufio.NewWriter(f)
+
+	wr.Write(common.Last.Block.BlockHash.Hash[:])
+
+	btc.WriteVlen(wr, uint64(len(TransactionsToSend)))
+	for _, t2s := range TransactionsToSend {
+		t2s.WriteBytes(wr)
+	}
+
+	btc.WriteVlen(wr, uint64(len(SpentOutputs)))
+	for k, v := range SpentOutputs {
+		binary.Write(wr, binary.LittleEndian, k)
+		binary.Write(wr, binary.LittleEndian, v)
+	}
+
+	wr.Write(END_MARKER[:])
+	wr.Flush()
+	f.Close()
+}
+
 func SubmitTrustedTx(tx *btc.Tx, rawtx []byte) bool {
 	return HandleNetTx(&TxRcvd{tx: tx, raw: rawtx, trusted: true}, true)
 }
 
-func MempoolLoad() bool {
+func MempoolLoad1() bool {
 	var ha [32]byte
 	var totcnt, txlen uint64
 	var rawtx []byte
@@ -676,12 +738,6 @@ func MempoolLoad() bool {
 
 
 
-	// skip this tx when loading mempool
-	/*
-	skip_tx := btc.NewUint256FromString("1e6536ab149a26bbff1c1c08612355dfee6fc8141e85aa1fb30932e8cc2fbc06")
-	println("skipped tx", skip_tx.String())
-	*/
-
 	for ; totcnt > 0; totcnt-- {
 		txlen, er = btc.ReadVLen(rd)
 		if er != nil {
@@ -700,12 +756,6 @@ func MempoolLoad() bool {
 			return false
 		}
 		tx.SetHash(rawtx)
-		/*
-		if tx.Hash.Equal(skip_tx) {
-			println("skipped")
-			continue
-		}
-		*/
 		SubmitTrustedTx(tx, rawtx)
 	}
 
@@ -723,6 +773,154 @@ func MempoolLoad() bool {
 
 	return true
 }
+
+
+func MempoolLoad2() bool {
+	var t2s *OneTxToSend
+	var totcnt, le uint64
+	var tmp [32]byte
+	var bi BIDX
+	var tina uint32
+	var i int
+
+	f, er := os.Open(common.GocoinHomeDir + MEMPOOL_FILE_NAME2)
+	if er != nil {
+		fmt.Println("MempoolLoad:", er.Error())
+		return false
+	}
+	defer f.Close()
+
+	fmt.Println("Loading mempool from", MEMPOOL_FILE_NAME2)
+
+	rd := bufio.NewReader(f)
+	if er = btc.ReadAll(rd, tmp[:32]); er != nil {
+		goto fatal_error
+	}
+	if !bytes.Equal(tmp[:32], common.Last.Block.BlockHash.Hash[:]) {
+		er = errors.New(MEMPOOL_FILE_NAME2 + " is for different last block hash")
+		goto fatal_error
+	}
+
+	if totcnt, er = btc.ReadVLen(rd); er != nil {
+		goto fatal_error
+	}
+
+	TransactionsToSend = make(map[BIDX]*OneTxToSend, int(totcnt))
+	for ; totcnt > 0; totcnt-- {
+		le, er = btc.ReadVLen(rd)
+		if er != nil {
+			goto fatal_error
+		}
+
+		t2s = new(OneTxToSend)
+		t2s.Data = make([]byte, int(le))
+
+		er = btc.ReadAll(rd, t2s.Data)
+		if er != nil {
+			goto fatal_error
+		}
+
+		t2s.Tx, i = btc.NewTx(t2s.Data)
+		if t2s.Tx == nil || i != len(t2s.Data) {
+			er = errors.New(fmt.Sprint("Error parsing tx from ", MEMPOOL_FILE_NAME2, " at idx", len(TransactionsToSend)))
+			goto fatal_error
+		}
+		t2s.Tx.SetHash(t2s.Data)
+
+		le, er = btc.ReadVLen(rd)
+		if er != nil {
+			goto fatal_error
+		}
+		t2s.Spent = make([]uint64, int(le))
+		if er = binary.Read(rd, binary.LittleEndian, t2s.Spent[:]); er != nil {
+			goto fatal_error
+		}
+
+		if er = binary.Read(rd, binary.LittleEndian, &t2s.Invsentcnt); er != nil {
+			goto fatal_error
+		}
+
+		if er = binary.Read(rd, binary.LittleEndian, &t2s.SentCnt); er != nil {
+			goto fatal_error
+		}
+
+		if er = binary.Read(rd, binary.LittleEndian, &tina); er != nil {
+			goto fatal_error
+		}
+		t2s.Firstseen = time.Unix(int64(tina), 0)
+
+		if er = binary.Read(rd, binary.LittleEndian, &tina); er != nil {
+			goto fatal_error
+		}
+		t2s.Lastsent = time.Unix(int64(tina), 0)
+
+		if er = binary.Read(rd, binary.LittleEndian, &t2s.Volume); er != nil {
+			goto fatal_error
+		}
+
+		if er = binary.Read(rd, binary.LittleEndian, &t2s.Fee); er != nil {
+			goto fatal_error
+		}
+
+		if er = binary.Read(rd, binary.LittleEndian, &t2s.SigopsCost); er != nil {
+			goto fatal_error
+		}
+
+		if er = binary.Read(rd, binary.LittleEndian, &t2s.VerifyTime); er != nil {
+			goto fatal_error
+		}
+
+		if er = btc.ReadAll(rd, tmp[:4]); er != nil {
+			goto fatal_error
+		}
+		t2s.Own = tmp[0]
+		t2s.Blocked = tmp[1]
+		t2s.MemInputs = tmp[2] != 0
+		t2s.Final = tmp[3] != 0
+
+		t2s.Tx.Fee = t2s.Fee
+
+		TransactionsToSend[t2s.Hash.BIdx()] = t2s
+		TransactionsToSendSize += uint64(len(t2s.Data))
+	}
+
+	if totcnt, er = btc.ReadVLen(rd); er != nil {
+		goto fatal_error
+	}
+
+	SpentOutputs = make(map[uint64]BIDX, int(totcnt))
+	for ; totcnt > 0; totcnt-- {
+		if er = binary.Read(rd, binary.LittleEndian, &le); er != nil {
+			goto fatal_error
+		}
+
+		if er = binary.Read(rd, binary.LittleEndian, &bi); er != nil {
+			goto fatal_error
+		}
+
+		SpentOutputs[le] = bi
+	}
+
+	if er = btc.ReadAll(rd, tmp[:len(END_MARKER)]); er != nil {
+		goto fatal_error
+	}
+	if !bytes.Equal(tmp[:len(END_MARKER)], END_MARKER) {
+		er = errors.New(MEMPOOL_FILE_NAME2 + " has marker missing")
+		goto fatal_error
+	}
+
+	fmt.Println(len(TransactionsToSend), "transactions loaded from", MEMPOOL_FILE_NAME2)
+
+	return true
+
+fatal_error:
+	fmt.Println("Error loading", MEMPOOL_FILE_NAME2, ":", er.Error())
+	TransactionsToSend = make(map[BIDX]*OneTxToSend)
+	TransactionsToSendSize = 0
+	SpentOutputs = make(map[uint64]BIDX)
+	return false
+}
+
 
 
 
