@@ -6,7 +6,6 @@ Lib:
 * Try to make own (faster) implementation of sha256 and rimp160
 
 Client:
-* Improve time of loading mempool from disk
 * Use different "friends.txt" for testnet
 * Monitor: at slow connections it gets stuck (new blocks stop being downloaded). Go to standby and come back.
 * Optionally use utils.GetBlockFromWeb() for initial blockchain download
